--- a/road_vehicle/templates/manifest.json
+++ b/road_vehicle/templates/manifest.json
@@ -73,5 +73,7 @@
         [-3, 1.5],
         [0, -0.5],
         [3, 0.5]
-    ]
+    ],
+    "agrf_bpps": [8, 32],
+    "agrf_scales": [1, 2, 4]
 }
