--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,6 +36,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Generate docs (RV)
         run: make doc.rv
+      - name: Generate docs (RT)
+        run: make doc.rt
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install ruby deps
