--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Generate docs (RV)
         run: make doc.rv
       - name: Generate docs (RT)
-        run: GOPATH=~/.local make doc.rt
+        run: PATH=${PWD}/gopath/bin:${PATH} make doc.rt
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install ruby deps
