--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: git lfs checkout
+        run: git lfs install && git lfs checkout
       - name: Install golang deps
         run: ./install-go-dependencies.sh
       - name: Install system python deps
