--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -40,6 +40,8 @@ jobs:
         run: make doc.rv
       - name: Generate docs (RT)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.rt
+      - name: Generate docs (AEGIS)
+        run: make doc.aegis
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install ruby deps
