--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -48,11 +48,8 @@ jobs:
         run: sudo gem install bundler:2.3.26 && cd docs && bundle install
       - name: Build with Jekyll
         run: cd docs && bundle exec jekyll build
-          #- name: Build with Jekyll
-          #uses: actions/jekyll-build-pages@v1
-          #with:
-          #source: ./docs/
-          #destination: ./docs/_site
+      - name: Build with Jekyll (zh-cn)
+        run: cd docs/zh-cn && bundle exec jekyll build && mv _site ../_site/zh-cn
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
