--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -45,11 +45,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install ruby deps
-        run: sudo gem install bundler:2.3.26 && cd docs && sudo bundle install --system
+        run: sudo gem install bundler:2.3.26 && cd docs && bundle install
       - name: Build with Jekyll
         run: cd docs && bundle exec jekyll build
       - name: Build with Jekyll (zh-cn)
-        run: cd docs/zh-cn && bundle exec jekyll build && mv _site ../_site/zh-cn
+        run: cd docs/zh-cn && bundle install && bundle exec jekyll build && mv _site ../_site/zh-cn
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
