--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,4 @@ url: "https://ahyangyi.github.io/"
 github_username:  ahyangyi
 theme: just-the-docs
 languages: ["en-GB", "zh-CN"]
+markdown: kramdown
