--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-grf @ git+https://github.com/citymania-org/grf-py@main
+grf @ git+https://github.com/citymania-org/grf-py@fe35370bc3852c2dfe6a848710f7cf613cf5fde4
 tabulate
