(meta) stick to a known-to-work commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-grf @ git+https://github.com/ahyangyi/grf-py@set-bpp
+grf @ git+https://github.com/ahyangyi/grf-py@bd53dc22391f8b30f44a2544cbe2479ed212d8fc
 tabulate
