--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Generate docs (AEGIS)
         run: make doc.aegis
       - name: Generate docs (Bridge)
-        run: make doc.bridge
+        run: PATH=${PWD}/gopath/bin:${PATH} make doc.bridge
       - name: Setup Pages
         uses: actions/configure-pages@main
       - name: Install ruby deps
