--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,8 @@ jobs:
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.rt
       - name: Generate docs (AEGIS)
         run: make doc.aegis
+      - name: Generate docs (STATION)
+        run: make doc.station
       - name: Generate docs (Bridge)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.bridge
       - name: Setup Pages
