(quickfix) everyone gets a gorender

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,9 +41,9 @@ jobs:
       - name: Generate docs (RT)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.rt
       - name: Generate docs (AEGIS)
-        run: make doc.aegis
+        run: PATH=${PWD}/gopath/bin:${PATH} make doc.aegis
       - name: Generate docs (STATION)
-        run: make doc.station
+        run: PATH=${PWD}/gopath/bin:${PATH} make doc.station
       - name: Generate docs (Bridge)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.bridge
       - name: Setup Pages
