(station) docgen fix image size

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.rt
       - name: Generate docs (AEGIS)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.aegis
-      - name: Generate docs (STATION)
+      - name: Generate docs (Station)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.station
       - name: Generate docs (Bridge)
         run: PATH=${PWD}/gopath/bin:${PATH} make doc.bridge
