(agrf) move default deltas to configuration files

--- a/road_vehicle/templates/manifest.json
+++ b/road_vehicle/templates/manifest.json
@@ -76,5 +76,6 @@
         [3, 0.5]
     ],
     "agrf_bpps": [8, 32],
-    "agrf_scales": [1, 2, 4]
+    "agrf_scales": [1, 2, 4],
+    "agrf_deltas": [[0, -2], [2, -1], [4, 0], [2, 1], [0, 2], [-2, 1], [-4, 0], [-2, -1]]
 }
