--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-grf @ git+https://github.com/ahyangyi/grf-py@f68cedca7205409c08475842766e60f79cba7d84
+grf @ git+https://github.com/citymania-org/grf-py@6f210c70c531d88f3bdf2d4cca193abd3ea88e75
 tabulate
