--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,6 +31,8 @@ jobs:
         run: sudo apt update && sudo apt install python3-ply python3-pil
       - name: Install python deps
         run: pip install -r requirements.txt && pip install pytest
+      - name: Test agrf
+        run: pytest agrf
       - name: Test stations
         run: pytest station
       - name: Test AEGIS
