--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,6 +29,10 @@ jobs:
       #   run: ./install-go-dependencies.sh
       - name: Install system python deps
         run: sudo apt update && sudo apt install python3-ply python3-pil
+      - name: Upgrade pip
+        run: python -m ensurepip --upgrade
+      - name: Get setuptools
+        run: pip install --upgrade setuptools
       - name: Install python deps
         run: pip install -r requirements.txt && pip install pytest
       - name: Test agrf
