--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-grf @ git+https://github.com/citymania-org/grf-py@9d5eb2ad
+grf @ git+https://github.com/ahyangyi/grf-py@d64399f
 tabulate
 numpy~=1.26.4
